<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.AuthFragment">

    <ImageView
        android:id="@+id/authSun"
        android:layout_width="268dp"
        android:layout_height="290dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="-4dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/sun"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topColorBar" />

    <ImageView
        android:id="@+id/authSea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/sea"
        android:src="@drawable/sea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/topColorBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/authAppLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topColorBar" />

    <TextView
        android:id="@+id/authAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/topColorBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topColorBar">

        <TextView
            android:id="@+id/connectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/connection"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/etLoginMail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:hint="@string/mail_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbKeepConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/stay_connected" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:stateListAnimator="@animator/button_state_list_animator"
            android:text="@string/connect"
            android:textSize="16sp"
            app:cornerRadius="32dp" />

        <TextView
            android:id="@+id/tvLoginHelper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textColor="@color/secondary_blue"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topColorBar"
        tools:visibility="gone">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/etRegisterName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:autofillHints="name"
            android:hint="@string/name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etRegisterMail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:hint="@string/mail_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:stateListAnimator="@animator/button_state_list_animator"
            android:text="@string/create_account"
            android:textSize="16sp"
            app:cornerRadius="32dp" />

        <TextView
            android:id="@+id/tvRegisterHelper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/already_have_account"
            android:textAlignment="center"
            android:textColor="@color/secondary_blue"
            android:textSize="16sp" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAuthGoogle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/grey2"
            android:fontFamily="sans-serif-medium"
            android:stateListAnimator="@animator/button_state_list_animator"
            android:text="@string/continue_with_google"
            android:textAlignment="center"
            android:textColor="@color/secondary_blue"
            android:textSize="16sp"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/googleAuthLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/google_logo"
            android:elevation="16dp"
            android:src="@drawable/googlelogo"
            app:layout_constraintBottom_toBottomOf="@+id/btnAuthGoogle"
            app:layout_constraintStart_toStartOf="@+id/btnAuthGoogle"
            app:layout_constraintTop_toTopOf="@+id/btnAuthGoogle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbAuth"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>