<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/senderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/message_name"
            android:textColor="@color/secondary_blue">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/receiving_message_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textMessageR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/lorem_ipsum_desc_short"
                android:textColor="@color/black"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/messageTimeR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/message_time"
                android:textColor="@color/grey4" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>